pkg/ibmvpc/examples/out/analysis_out/demo_with_instances_all_vpcs_subnetsBased_withPGW.txt
Subnet connectivity for VPC ky-testenv-vpc
ky-testenv-edge-subnet-1 => Public Internet (all ranges) : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-1 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-1 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-1 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-edge-subnet-1 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-edge-subnet-2 => Public Internet (all ranges) : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-2 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-2 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-2 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-edge-subnet-2 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-edge-subnet-3 => Public Internet (all ranges) : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-3 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-3 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-edge-subnet-3 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-edge-subnet-3 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-private-subnet-1 => ky-testenv-edge-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-edge-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-edge-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-transit-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-transit-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-1 => ky-testenv-transit-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-edge-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-edge-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-edge-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-transit-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-transit-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-2 => ky-testenv-transit-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-edge-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-edge-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-edge-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443 dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-transit-subnet-1 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-transit-subnet-2 : protocol: TCP dst-ports: 443
ky-testenv-private-subnet-3 => ky-testenv-transit-subnet-3 : protocol: TCP dst-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-1 => ky-testenv-transit-subnet-2 : All Connections
ky-testenv-transit-subnet-1 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-2 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-2 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-2 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-transit-subnet-2 => ky-testenv-transit-subnet-3 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-edge-subnet-1 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-edge-subnet-2 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-edge-subnet-3 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-private-subnet-1 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-3 => ky-testenv-private-subnet-2 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-3 => ky-testenv-private-subnet-3 : protocol: TCP src-ports: 443
ky-testenv-transit-subnet-3 => ky-testenv-transit-subnet-1 : All Connections
ky-testenv-transit-subnet-3 => ky-testenv-transit-subnet-2 : All Connections
